--- a/index.html
+++ b/index.html
@@ -396,4 +396,8 @@
         </div>
     </section>
 </body>
+    
+<!-- Add this to your HTML head -->
+<!-- © 2025 FRENESÍ. All rights reserved. Unauthorized copying prohibited. -->
+    
 </html>
