--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         <span class="date-month">AGO</span>
                     </div>
                     <div class="show-info">
-                        <h3>picoypala.bar</h3>
+                        <h3>Pico Y Pala Bar</h3>
                         <div class="show-location">
                             <i class="fas fa-map-marker-alt"></i>
                             Av. Alberdi 31, Rosario
