--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     </section>
 
     <!-- Shows Section -->
-    <section class="shows-section">
+    <section class="shows-section" style="display: none;">
         <h2 class="section-title">Próximas Fechas</h2>
         <div class="shows-grid">
             
