--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </section>
 
     <!-- Shows Section -->
-    <section class="shows-section" style="display: none;">
+    <section class="shows-section">
         <h2 class="section-title">Próximas Fechas</h2>
         <div class="shows-grid">
             
-            <div class="show-card">
+<!--             <div class="show-card">
                 <div class="show-date">
                     <div class="date-box">
                         <span class="date-day">09</span>
@@ -39,6 +39,44 @@
                             15:00hs GMT-3
                         </div>
                         <a href="https://www.instagram.com/cecgys625" class="show-link">Ver entradas →</a>
+                    </div>
+                </div>
+            </div> -->
+
+            <div class="show-card">
+                <div class="show-date">
+                    <div class="date-box">
+                        <span class="date-day">11</span>
+                        <span class="date-month">OCT</span>
+                    </div>
+                    <div class="show-info">
+                        <h3>Feria Del Libro Peronista</h3>
+                        <div class="show-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            Sarmiento 1735, Rosario
+                        </div>
+                        <a href="https://www.instagram.com/institutojdp" class="show-link">Ver entradas →</a>
+                    </div>
+                </div>
+            </div>
+
+                        <div class="show-card">
+                <div class="show-date">
+                    <div class="date-box">
+                        <span class="date-day">18</span>
+                        <span class="date-month">OCT</span>
+                    </div>
+                    <div class="show-info">
+                        <h3>Festival Caos Controlado</h3>
+                        <div class="show-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            Av. Diario La Capital 1602, Rosario
+                        </div>
+                        <div class="show-time">
+                            <i class="fas fa-clock"></i>
+                            15:00hs GMT-3
+                        </div>
+                        <a href="https://www.instagram.com/haciendo_universidad/" class="show-link">Ver entradas →</a>
                     </div>
                 </div>
             </div>
