--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                             <i class="fas fa-map-marker-alt"></i>
                             Sarmiento 1735, Rosario
                         </div>
+                        <div class="show-time">
+                            <i class="fas fa-clock"></i>
+                            20:00hs GMT-3
+                        </div>
                         <a href="https://www.instagram.com/institutojdp" class="show-link">Ver entradas →</a>
                     </div>
                 </div>
@@ -74,7 +78,7 @@
                         </div>
                         <div class="show-time">
                             <i class="fas fa-clock"></i>
-                            15:00hs GMT-3
+                            18:30hs GMT-3
                         </div>
                         <a href="https://www.instagram.com/haciendo_universidad/" class="show-link">Ver entradas →</a>
                     </div>
