--- a/index.html
+++ b/index.html
@@ -46,41 +46,20 @@
             <div class="show-card">
                 <div class="show-date">
                     <div class="date-box">
-                        <span class="date-day">11</span>
-                        <span class="date-month">OCT</span>
+                        <span class="date-day">09</span>
+                        <span class="date-month">NOV</span>
                     </div>
                     <div class="show-info">
-                        <h3>Feria Del Libro Peronista</h3>
+                        <h3>Riva Rock</h3>
                         <div class="show-location">
                             <i class="fas fa-map-marker-alt"></i>
-                            Sarmiento 1735, Rosario
+                            Puerto Joven, Rosario
                         </div>
                         <div class="show-time">
                             <i class="fas fa-clock"></i>
-                            20:00hs GMT-3
+                            17:00hs GMT-3
                         </div>
-                        <a href="https://www.instagram.com/institutojdp" class="show-link">Ver entradas →</a>
-                    </div>
-                </div>
-            </div>
-
-                        <div class="show-card">
-                <div class="show-date">
-                    <div class="date-box">
-                        <span class="date-day">18</span>
-                        <span class="date-month">OCT</span>
-                    </div>
-                    <div class="show-info">
-                        <h3>Festival Caos Controlado</h3>
-                        <div class="show-location">
-                            <i class="fas fa-map-marker-alt"></i>
-                            Av. Diario La Capital 1602, Rosario
-                        </div>
-                        <div class="show-time">
-                            <i class="fas fa-clock"></i>
-                            18:30hs GMT-3
-                        </div>
-                        <a href="https://www.instagram.com/haciendo_universidad/" class="show-link">Ver entradas →</a>
+                        <a href="https://www.instagram.com/p/DQX869ukX7D/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="show-link">Ir →</a>
                     </div>
                 </div>
             </div>
