--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="social-section">
         <h2 class="social-title">Seguinos</h2>
         <div class="social-links">
-            <a href="https://instagram.com/_frenesioficial" target="_blank" class="social-link">
+            <a href="https://instagram.com/frenesirock" target="_blank" class="social-link">
                 <i class="fab fa-instagram"></i>
             </a>
             <a href="https://youtube.com/@frenesi_oficial" target="_blank" class="social-link">
