--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <i class="fas fa-clock"></i>
                             17:00hs GMT-3
                         </div>
-                        <a href="https://www.instagram.com/p/DQX869ukX7D/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="show-link">Ir →</a>
+                        <a href="https://www.instagram.com/p/DQX869ukX7D/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="show-link">IR →</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <a href="https://instagram.com/frenesirock" target="_blank" class="social-link">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://youtube.com/@frenesi_oficial" target="_blank" class="social-link">
+            <a href="https://www.youtube.com/@frenesirockyt" target="_blank" class="social-link">
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
