--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
             <div class="show-card">
                 <div class="show-date">
                     <div class="date-box">
-                        <span class="date-day">09</span>
-                        <span class="date-month">NOV</span>
+                        <span class="date-day">11</span>
+                        <span class="date-month">DIC</span>
                     </div>
                     <div class="show-info">
-                        <h3>Riva Rock</h3>
+                        <h3>Que Sea Rock - Multiespacio Cultural</h3>
                         <div class="show-location">
                             <i class="fas fa-map-marker-alt"></i>
-                            Puerto Joven, Rosario
+                            Santa Fe 1166, Rosario
                         </div>
                         <div class="show-time">
                             <i class="fas fa-clock"></i>
-                            17:00hs GMT-3
+                            20:00hs GMT-3
                         </div>
                         <a href="https://www.instagram.com/p/DQX869ukX7D/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="show-link">IR →</a>
                     </div>
