--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <i class="fas fa-clock"></i>
                             20:00hs GMT-3
                         </div>
-                        <a href="https://www.instagram.com/p/DQX869ukX7D/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="show-link">IR →</a>
+                        <a href="" class="show-link">IR →</a>
                     </div>
                 </div>
             </div>
